sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:4: error: not found: value gap
  gap=len
  ^AlgCombSort:6: error: not found: value gap
  while ((gap>1)||(a==1)){
          ^AlgCombSort:8: error: not found: value gap
  if (gap>1) {
      ^AlgCombSort:9: error: not found: value gap
    gap=(gap.toDouble/1.3).toInt
    ^AlgCombSort:12: error: not found: value gap
  while ((i+gap)<len) {
            ^AlgCombSort:13: error: not found: value gap
    if (isSmaller(i, i+gap)==false){
                       ^AlgCombSort:14: error: not found: value gap
      swap(i,i+gap)
               ^