sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var len=getValueCount()
  gap=len
  var a=1
  while ((gap>1)||(a==1)){
    a=0
  if (gap>1) {
    gap=(gap.toDouble/1.3).toInt
  }
  var i=0
  while ((i+gap)<len) {
    if (isSmaller(i, i+gap)==false){
      swap(i,i+gap)
      a=1
      
    }
    i=i+1
  }
  

}


}